// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`front-matter.css - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
something
---

.class {    display: none;    }

=====================================output=====================================
---
something
---

/** @format */

.class {
  display: none;
}

================================================================================
`;

exports[`simple.css - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.class {    display: none;    }

=====================================output=====================================
/** @format */

.class {
  display: none;
}

================================================================================
`;

exports[`start-with-comment.css - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * hello world
 */

.class {    display: none;    }

=====================================output=====================================
/**
 * hello world
 *
 * @format
 */

.class {
  display: none;
}

================================================================================
`;
